<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_nmea"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_nmea_hint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"></TextView>

        <ScrollView
            android:id="@+id/tv_scroll_log"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/tv_nmea_log"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scrollbars="vertical"></TextView>
        </ScrollView>

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/gray" >
    </View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        android:layout_gravity="bottom">

        <CheckBox
            android:id="@+id/tv_uart_log_switch"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/uart_log_switch" >
        </CheckBox>

        <Button
            android:id="@+id/btn_nmea_start"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nmea_start" >
        </Button>

        <Button
            android:id="@+id/btn_nmea_stop"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nmea_stop" >
        </Button>
    </LinearLayout>
</LinearLayout>
