<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_auto_test"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/style_table_left"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/true_position_list">
        </TextView>

        <Spinner
            android:id="@+id/Spinner_true_position"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/true_position_list" />

    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/style_table_left"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/title_lat_option" >
        </TextView>
        <EditText
            android:id="@+id/et_gps_test_latitude"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:digits="-0123456789."
            android:maxLength="12" >
        </EditText>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/style_table_left"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/title_lon_option" >
        </TextView>
        <EditText
            android:id="@+id/et_gps_test_longitude"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:digits="-0123456789."
            android:maxLength="15" >
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/btn_gps_test_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/gps_test_save" >
        </Button>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/gray" >
    </View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_result_hint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold" >
        </TextView>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/tv_result_log"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scrollbars="vertical" >
            </TextView>
        </ScrollView>

    </LinearLayout>

</LinearLayout>
